@@ -45,9 +45,16 @@ needs to craft objects. Workshops that have a master assigned cannot be used in
 this way.
 
 When a workshop is designated for idle crafting, this tool will create crafting
-jobs and assign them to idle dwarves who have a need for crafting
-objects. Currently, bone carving and stonecrafting are supported, with
-stonecrafting being the default option. This script respects the setting for
-permitted general work orders from the "Workers" tab. Thus, to designate a
+jobs and assign them to idle dwarves who have a need for crafting objects. This
+script respects the setting for permitted general work orders from the "Workers"
+tab.
+
+For workshops without input stockpile links, bone carving and stonecrafting are
+supported, with stonecrafting being the default option. Thus, to designate a
 workshop for bone carving, disable the stonecrafting labor while keeping the
 bone carving labor enabled.
+
+For workshops with input stockpile links, the creation of totems and horn crafts
+are supported as well. In this case, the choice of job is made randomly based on
+the resources available in the input stockpiles (respecting the permitted
+labors from the workshop profile).
